--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,17 @@
     background-color: #444;
 }
 
+@media (min-width: 576px) {
+    .container-fluid-2 {
+        padding: 0 1.5rem !important;
+    }
+}
+@media (min-width: 768px) {
+    .container-fluid-2 {
+        padding: 0 2.5rem !important;
+    }
+}
+
 .navbar-brand {
     font-weight: 600;
 }
