--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,14 +2,14 @@
     background-color: #444;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 767px) {
     .container-fluid-2 {
         padding: 0 1.5rem !important;
     }
 }
 @media (min-width: 768px) {
     .container-fluid-2 {
-        padding: 0 2.5rem !important;
+        padding: 0 3.5rem !important;
     }
 }
 
