Make the services page responsive for the tablets

--- a/src/components/Prestations.css
+++ b/src/components/Prestations.css
@@ -1,10 +1,59 @@
-.services-card-content {
-    padding-bottom: 80px !important;
+@media (max-width: 767px) {
+    .prestations {
+        margin: 0 1rem !important;
+    }
+
+    .prestation-1 {
+        padding: 0 !important;
+        margin: 0 1rem 0 1rem;
+    }
+
+    .prestation-2 {
+        padding: 0 !important;
+        margin: 0 1rem 0 1rem;
+    }
+    
+    .prestation-3 {
+        padding: 0 !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .prestations {
+        width: 100%;
+        position: relative;
+        left: 10px;
+    }
+}
+
+@media (max-width: 767px) {
+    .services-card-content {
+        padding: 3rem 1.25rem 80px 1.25rem !important;
+    }
 }
     
+.card:hover .services-card-content .fa-icon {
+    color: #cde1f8 !important;
+}
+@media (min-width: 768px) {
+    .services-card-content {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
+    }
+}
 .card-title {
     color: #1e1e1e !important;
     font-weight: 600;
+}
+
+@media (min-width: 768px) {
+    .card-title-p {
+        font-size: 1.25rem;
+    }
+
+    .description-p {
+        font-size: 0.95rem;
+    }
 }
 
 strong {
