Make the legal notice page responsive for the tablets

--- a/src/components/LegalNoticePage.css
+++ b/src/components/LegalNoticePage.css
@@ -6,14 +6,39 @@
 .h2-lnp {
     color: #1e1e1e;
 }
+@media (max-width: 767px) {
+    .blue-stroke-lnp {
+        width: 76px;
+        padding-bottom: 60px;
+    }
+}
 
-.blue-stroke-lnp {
-    width: 76px;
-    padding-bottom: 60px;
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+    .blue-stroke-lnp {
+        width: 150px;
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: 767px) {
+    .accordion {
+        margin: 0 0.5rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+    .accordion {
+        margin: 0 3rem;
+    }
+}
+
+.accordion-header {
+    font-weight: 600 !important;
 }
 
 h4 {
-    color: #1e1e1e;
+    color: #1e1e1e !important;
+    font-weight: 600 !important;
 }
 
 p {
