--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -92,10 +92,6 @@
     color: #1e1e1e;
 }
 
-.titre-a-propos {
-    padding-top: 15px;;
-}
-
 @media (max-width: 767px) {
     .h2-hp {
         font-size: calc(1.3rem + .6vw) !important;
@@ -131,6 +127,22 @@
 @media (min-width: 768px) {
     .a-propos > .card {
         padding: 1.25rem 2rem 3rem 2rem !important;
+    }
+}
+
+.titre-a-propos {
+    padding-top: 15px;
+}
+
+@media (max-width: 991px) {
+    .titre-a-propos {
+        font-size: calc(1.375rem + 1.5vw) !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .titre-a-propos {
+        font-size: calc(1.3rem + .6vw);
     }
 }
 
