--- a/src/components/ServicesPage.css
+++ b/src/components/ServicesPage.css
@@ -1,59 +1,70 @@
-    @media (max-width: 767px){
-        .services-page {
-            padding-top: 30px;
-            padding-bottom: 100px;
-            background-color: #F8F9FB;
-        }
+@media (max-width: 767px){
+    .services-page {
+    padding-top: 30px;
+    padding-bottom: 100px;
+    background-color: #F8F9FB;
     }
-    @media (min-width: 768px) {
-        .services-page {
-            padding-bottom: 100px;
-            background-color: #F8F9FB;
-        }
-    }
-    
-    p {
-        color:#444;
-    }
-    
-    .banner-mobile {
-        width: 100%; 
-    }
+}
 
-    @media (min-width: 768px) {
-        .banner-mobile {
-            position: relative;
-            top: -12px;
-        }
+@media (min-width: 768px) {
+    .services-page {
+    padding-top: 30px;
+    padding-bottom: 100px;
+    background-color: #F8F9FB;
     }
+}
+     
+p {
+    color:#444;
+}
+     
+.banner {
+    width: 100%; 
+}
+     
+@media (max-width: 767px) {
+    .h2-sp {
+    font-weight: 600;
+    color: #1e1e1e;
+    margin-top: 3rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px){
+    .h2-sp {
+    font-weight: 600;
+    color: #1e1e1e;
+    margin-top: 1.5rem !important;
+    }
+}
+   
+@media (min-width: 992px) {
+    .h2-sp {
+    font-weight: 600;
+    color: #1e1e1e;
+    margin-top: 3rem;
+    }
+}
+.text-intro{
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+.blue-stroke-sp {
+    width: 76px;
+    padding-bottom: 100px;
+}
     
-    @media (max-width: 767px) {
-        .h2-sp {
-            font-weight: 600;
-            color: #1e1e1e;
-            margin-top: 3rem;
-        }
-    }
-    @media (min-width: 768px) {
-        .h2-sp {
-            font-weight: 600;
-            color: #1e1e1e;
-            margin-top: 1.5rem !important;
-        }
-    }
-    
-    .text-intro{
-        font-size: 1.1rem;
-        font-weight: 400;
-    }
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .blue-stroke-sp {
-        width: 76px;
+    width: 150px;
+    padding-bottom: 100px;
+    }
+}
+
+@media (min-width: 992px) {
+    .blue-stroke-sp {
+        width: 240px;
         padding-bottom: 100px;
     }
-
-    @media (min-width: 768px) {
-        .blue-stroke-sp {
-            width: 150px;
-            padding-bottom: 100px;
-        }
-    }
+}
