--- a/src/components/ProductionsPage.css
+++ b/src/components/ProductionsPage.css
@@ -6,8 +6,17 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .productions-page {
+        padding-top: 25px;
+        padding-bottom: 50px;
+        background-color: #F8F9FB;
+    }
+}
+
+@media (min-width: 992px) {
+    .productions-page {
+        padding-top: 25px;
         padding-bottom: 50px;
         background-color: #F8F9FB;
     }
@@ -30,26 +39,38 @@ p {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .blue-stroke-pp {
         width: 150px;
         padding-bottom: 60px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 992px) {
+    .blue-stroke-pp {
+        width: 240px;
+        padding-bottom: 60px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .container-realisations {
         width: 100%;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .center {
         width: 92%;
         display: flex;
         justify-content: center;
         position: relative;
         left: 4%;
+    }
+}
+
+@media (min-width: 992px) {
+    .center {
+        display: block;
     }
 }
 
@@ -62,7 +83,7 @@ p {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .realisations {
         position: relative;
         left: 12px;
@@ -72,38 +93,16 @@ p {
     }
 }
 
-@media (max-width: 767px) {
-    .realisation-1 {
-        margin: 0 !important;
-        padding: 0 !important
-    }
-
-    .realisation-2 {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
-
-    .realisation-3 {
-        margin: 0 !important;
-        padding: 0 !important;
+@media (min-width: 992px) {
+    .realisations {
+        justify-content: center;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
-    .realisation-1 {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
-
-    .realisation-2 {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
-
-    .realisation-3 {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
+.realisation-card {
+    margin: 0 !important;
+    padding: 0 !important;
+    align-self: flex-start;
 }
 
 .intitule-pp {
