--- a/src/components/LegalNoticePage.css
+++ b/src/components/LegalNoticePage.css
@@ -6,6 +6,7 @@
 .h2-lnp {
     color: #1e1e1e;
 }
+
 @media (max-width: 767px) {
     .blue-stroke-lnp {
         width: 76px;
@@ -13,9 +14,16 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .blue-stroke-lnp {
         width: 150px;
+        padding-bottom: 40px;
+    }
+}
+
+@media (min-width: 992px) {
+    .blue-stroke-lnp {
+        width: 240px;
         padding-bottom: 40px;
     }
 }
@@ -26,9 +34,15 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .accordion {
         margin: 0 3rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .accordion {
+        margin: 0 4rem;
     }
 }
 
