--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,9 @@
 footer {
     background-color: #EEE;
 }
-
+.footer-main-content {
+    width: 100%;
+}
 @media (max-width: 767px) {
     .footer-main-content {
         padding-left: 1rem !important;
@@ -9,14 +11,25 @@ footer {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .footer-main-content {
         padding-left: 0 !important;
         padding-bottom: 1.5rem !important;
     }    
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 992px) {
+    .footer-main-content {
+        padding-left: 1rem !important;
+        padding-bottom: 3rem;
+        justify-content: space-around;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .row > * {
+        max-width: 95% !important;
+    }
     .footer-element-1-2 {
         display: flex;
         margin: 0 3rem 1rem 3rem;
@@ -50,15 +63,33 @@ footer {
     }
 }
 
+@media (min-width: 992px) {
+    .footer-elements {
+        width: fit-content !important;
+    }
+}
+
 h2 {
     font-weight: 600;
     font-size: calc(0.95rem + 0.9vw) !important;
     color: var(--bs-cvdark);
 }
 
+@media (min-width: 992px) {
+    .h2-footer {
+        font-size: calc(1.275rem + .3vw) !important;
+    }
+}
+
 ul {
     padding: 0 !important;
     list-style-type: none;
+}
+
+@media (min-width: 992px) {
+    .ul-footer {
+        width: 100% !important;
+    }
 }
 
 .footer-elements:nth-child(n+2) ul {
@@ -105,6 +136,8 @@ footer .footer-main-content > div:nth-child(n+2) .social-icons {
 .social-icons ul li a img{
     width: 100%;
 }
+
+
 
 .copyright {
     background-color: #1e1e1e;
