--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -96,3 +96,60 @@ textarea {
 .span-cp-1 {
     height: 24px;
 }
+
+/*
+    L'utilisation des medias queries, ici, sert à ne pas causer d'erreurs au 
+    validateur du W3C, tout en permettant à la balise <iframe> d'être responsive.
+    La valeur "100%" n'étant pas recevable pour l'attribut "width". 
+*/
+.iframe-cp {
+    align-self: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 374px) {
+    .iframe-cp {
+        width: 190px;
+    }
+}
+
+@media screen and (min-width: 375px) and (max-width: 424px ) {
+    .iframe-cp {
+        width: 245px;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px ) {
+    .iframe-cp {
+        width: 295px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px ) {
+    .iframe-cp {
+        width: 307px;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1023px ) {
+    .iframe-cp {
+        width: 419px;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1199px ) {
+    .iframe-cp {
+        width: 435px;
+    }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1439px ) {
+    .iframe-cp {
+        width: 523px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .iframe-cp {
+        width: 643px;
+    }
+}
