--- a/src/components/JohnDoeProfile.css
+++ b/src/components/JohnDoeProfile.css
@@ -2,7 +2,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 56px;
+}
+
+@media (max-width: 991px) {
+    .jd-profile-page {
+        padding-top: 64px;
+    }
+}
+
+@media (min-width: 992px) {
+    .jd-profile-page {
+        padding-top: 56px;
+    }
 }
 
 .presentation-jdpp {
